feat(extension and cha-gui): start integration
- Update technical documentation
- Add language support for plugin
- Refactor extension.ts for better code organization
- Update GUI components for chat functionality
-  Integrate the model list section

--- a/docs/technical/00_初始构建过程.md
+++ b/docs/technical/00_初始构建过程.md
@@ -1,4 +1,6 @@
-> 这是项目从零开始构建的一部分流程，阅读这部分内容可以帮助理解项目结构。
+> 这是项目从零开始构建的一部分流程，这部分内容主要是记录如何用 vue 开发插件的前端部分，以及如何将插件与前端部分结合起来。
+>
+> 仅做存裆，对后续开发用处不大。
 > 
 > 参考教程：https://juejin.cn/post/7325132202970136585
 
