--- a/packages/extension/l10n/bundle.l10n.ja.json
+++ b/packages/extension/l10n/bundle.l10n.ja.json
@@ -1,3 +1,12 @@
 {
-
+    "ts.deleteSession": "セッションを削除する",
+    "ts.fetchingModelInfo": "モデルの応答を取得中です。しばらくしてからもう一度お試しください。",
+    "ts.loadChatSessionError": "チャットセッションの読み込みエラー：",
+    "ts.createdConfig": "コンフィグファイルが作成されました：",
+    "ts.parsingConfigError": "コンフィグファイルの解析エラー：",
+    "ts.modelNameError": "モデル名が長すぎます。128文字以内にしてください。",
+    "ts.modelTitleError": "モデルタイトルが長すぎます。128文字以内にしてください。",
+    "ts.modelNotSelected": "モデルが選択されていません。先にモデルを選択してください。",
+    "ts.unexpectedModelError": "エラー：存在しないモデルタイプです。コンフィグファイルを確認してください。",
+    "ts.requestFailed": "リクエストに失敗しました："
 }
