feat(extension and chat-gui): integrate the add model functionality
- Add a model creation form
- Update the API documentation
- Integrate the add model functionality

--- a/docs/technical/03_接口文档.md
+++ b/docs/technical/03_接口文档.md
@@ -2,30 +2,70 @@
 
 ### `init.ready`
 
-前端初始化完成后发送，表示可以正常接收数据了。
+前端组件挂载完成后发送，表示可以正常接收数据了
 
-无参数。
+无参数
 
 ### `modelID.update`
 
-用户选择的新的模型，向插件端确认。
+用户选择了新的模型，向插件端确认
 
 参数：
 
 - `modelID: string` 新选择的模型 ID
 
+### `config.update`
+
+请求插件发送最新的配置信息
+
+无参数
+
+### `model.add`
+
+添加新的模型
+
+参数：
+
+- `model: string` 模型配置
+
+  > 该字符串在 `JSON.parse` 后得到的对象类型为：
+  >
+  > ```typescript
+  > interface ModelConfig {
+  >     type: 'openai' | 'ollama';
+  >     model: string;
+  >     title?: string;
+  >     baseURL?: string;
+  >     apiKey?: string;
+  >     system?: string;
+  > }
+  > ```
+
 ## 插件端
 
 ### `models.update`
 
+发送最新模型列表和当前选择的模型的 ID
+
 参数：
 
 - `models: string` 模型配置的字符串
-- `modelID: string` 选中的模型的ID
+
+  > 该字符串在 `JSON.parse` 后得到的对象类型为：
+  >
+  > ```typescript
+  > interface Model {
+  >     id: string;
+  >     type: 'openai' | 'ollama';
+  >     name: string;
+  > }
+  > ```
+
+- `modelID: string` 选择的模型的 ID
 
 ### `modelID.updated`
 
-插件端确认了新选择的模型，通知前端修改。
+插件端确认了新选择的模型，通知前端修改
 
 参数：
 
