feat(chat): implement core chat functionality
- Add support for sending and receiving messages
- Implement request and response handling
- Refactor existing components for better reusability

--- a/docs/technical/03_接口文档.md
+++ b/docs/technical/03_接口文档.md
@@ -49,6 +49,14 @@
 
 - `modelID: string` 待删除的模型的 ID
 
+### `request.send`
+
+发送用户请求
+
+参数：
+
+- `request: string` 用户请求内容
+
 ## 插件端
 
 ### `models.update`
@@ -79,3 +87,44 @@
 
 - `modelID: string` 新选择的模型 ID
 
+### `request.load`
+
+发送用户请求内容给前端，让前端在聊天记录中加载该内容。
+
+参数：
+
+- `requestID: string` 请求 ID，也是本轮对话 ID
+- `content: string` 用户请求内容
+
+### `response.new`
+
+大模型开始应答用户请求，让前端在聊天记录中新增回答条目。
+
+参数：
+
+- `requestID` 对应的请求 ID
+- `type: string` 模型的类型
+- `name: string` 模型的展示名称
+
+### `response.stream`
+
+大模型流式回答，发送增量内容给前端。
+
+参数：
+
+- `data: string` 新增的回答内容
+- `requestID` 对应的请求 ID
+
+### `response.end`
+
+大模型对本次请求回答完毕。
+
+参数：
+
+- `requestID` 对应的请求 ID
+
+### `chat.new`
+
+新建聊天，通知前端清空当前聊天内容。
+
+无参数
