feat(extension): implement chat session loading and management
- Add functionality to load and manage chat sessions
- Implement new API for loading chat history
- Update extension to use new session management features
- Refactor existing code to support session loading

--- a/docs/technical/03_接口文档.md
+++ b/docs/technical/03_接口文档.md
@@ -123,6 +123,17 @@
 
 - `requestID` 对应的请求 ID
 
+### `response.load`
+
+加载聊天记录，无需实时更新
+
+参数：
+
+- `requestID` 对应的请求 ID
+- `type: string` 模型的类型
+- `name: string` 模型的展示名称
+- `content: string` 全部内容
+
 ### `chat.new`
 
 新建聊天，通知前端清空当前聊天内容。
