feat(gui-chat): add dialog deletion feature and improve user interface
- Add dialog delete functionality for both user and assistant messages
- Implement copy dialog content feature
- Add reasoning content toggle for responses
- Update input box to show appropriate shortcut key

--- a/docs/technical/03_接口文档.md
+++ b/docs/technical/03_接口文档.md
@@ -57,6 +57,14 @@
 
 - `request: string` 用户请求内容
 
+### `dialog.delete`
+
+删除一条对话（包含用户输入和模型输出）
+
+参数：
+
+- `requestID: string` 对话的请求 ID
+
 ## 插件端
 
 ### `language.set`
@@ -66,6 +74,23 @@
 参数：
 
 - `lang: string` 需要设置的语言
+
+### `settings.update`
+
+设置更新
+
+参数：
+
+- `settings: string` 设置信息的字符串
+
+  > 该字符串在 `JSON.parse` 后得到的对象类型为：
+  >
+  > ```typescript
+  > interface {
+  >     welcomeInfo: boolean;
+  >     sendShortcut: 'Ctrl+Enter' | 'Enter';
+  > }
+  > ```
 
 ### `models.update`
 
@@ -147,3 +172,11 @@
 新建聊天，通知前端清空当前聊天内容。
 
 无参数
+
+### `dialog.deleted`
+
+插件删除的对应聊天记录，前端进行更新
+
+参数：
+
+- `requestID: string` 对话的请求 ID
