feat(gui-chat): add response stop functionality and context menu
- Add response stop feature to halt ongoing model responses
- Add context menu for adding context to conversations (not implemented)
- Update settings to include code theme

--- a/docs/technical/03_接口文档.md
+++ b/docs/technical/03_接口文档.md
@@ -65,6 +65,12 @@
 
 - `requestID: string` 对话的请求 ID
 
+### `response.stop`
+
+让大模型停止当前回答的生成
+
+无参数
+
 ## 插件端
 
 ### `language.set`
@@ -77,7 +83,7 @@
 
 ### `settings.update`
 
-设置更新
+插件刚启动是或者对应设置更新时发送。其中 `codeTheme` 只会在插件启动时发送。
 
 参数：
 
@@ -89,6 +95,7 @@
   > interface {
   >     welcomeInfo: boolean;
   >     sendShortcut: 'Ctrl+Enter' | 'Enter';
+  >     codeTheme?: string;
   > }
   > ```
 
