feat(context): add context management for chat
- Implement context.get and context.goto functionality
- Update GUI to display and manage context

--- a/docs/technical/03_接口文档.md
+++ b/docs/technical/03_接口文档.md
@@ -65,11 +65,27 @@
 
 - `requestID: string` 对话的请求 ID
 
+- `context: string` 上下文列表
+
+  > 该字符串在 `JSON.parse` 后得到的对象类型为字符串列表，其中 `[selected]` 特指选中的内容。
+
 ### `response.stop`
 
 让大模型停止当前回答的生成
 
 无参数
+
+### `context.get`
+
+获取上下文列表
+
+无参数
+
+### `context.goto`
+
+跳转到对应的上下文文件
+
+- `path` 对应的路径
 
 ## 插件端
 
@@ -134,7 +150,12 @@
 参数：
 
 - `requestID: string` 请求 ID，也是本轮对话 ID
+
 - `content: string` 用户请求内容
+
+- `context: string` 上下文列表
+
+  > 该字符串在 `JSON.parse` 后得到的对象类型为字符串列表，其中 `[selected]` 特指选中的内容。
 
 ### `response.new`
 
@@ -187,3 +208,13 @@
 参数：
 
 - `requestID: string` 对话的请求 ID
+
+### `context.send`
+
+发送上下文列表
+
+参数：
+
+- `context: string` 上下文列表
+
+  > 该字符串在 `JSON.parse` 后得到的对象类型为字符串列表，其中 `[selected]` 特指选中的内容。
