--- a/packages/extension/l10n/bundle.l10n.json
+++ b/packages/extension/l10n/bundle.l10n.json
@@ -5,5 +5,6 @@
     "ts.createdConfig": "Config file created:",
     "ts.parsingConfigError": "Error parsing config file:",
     "ts.modelNotSelected": "No model selected, please select a model first.",
-    "ts.requestFailed": "Request failed:"
+    "ts.requestFailed": "Request failed:",
+    "ts.contextGotoError": "Failed to load context file:"
 }
