--- a/packages/extension/l10n/bundle.l10n.zh-cn.json
+++ b/packages/extension/l10n/bundle.l10n.zh-cn.json
@@ -5,5 +5,6 @@
     "ts.createdConfig": "已创建配置文件：",
     "ts.parsingConfigError": "配置文件解析错误：",
     "ts.modelNotSelected": "尚未选择模型，请先选择模型。",
-    "ts.requestFailed": "请求失败："
+    "ts.requestFailed": "请求失败：",
+    "ts.contextGotoError": "载入上下文文件失败："
 }
