feat(extension): add token usage display and improve chat functionality
- Add token usage display for OpenAI model conversations
- Remove unused dependencies

--- a/docs/technical/03_接口文档.md
+++ b/docs/technical/03_接口文档.md
@@ -182,7 +182,9 @@
 
 参数：
 
-- `requestID` 对应的请求 ID
+- `requestID: string` 对应的请求 ID
+- `prompt_tokens?: number` 用户输入消耗的 tokens
+- `completion_tokens?: number` 模型回复消耗的 tokens
 
 ### `response.load`
 
