docs(technical): update docs
- Update project structure mind map
- Update API document

--- a/docs/technical/03_接口文档.md
+++ b/docs/technical/03_接口文档.md
@@ -1,3 +1,11 @@
+## 说明
+
+前端和插件通过 vscode 提供的接口进行通信。
+
+在插件端通过 `MessageSender.ts` 中实现的类发送消息给前端，通过 `RequestHandler.ts` 中实现的类接收前端消息。
+
+在前端分别通过 `listener.ts` 和  `sender.ts` 来接收和发送消息。
+
 ## 前端
 
 ### `init.ready`
