--- a/packages/extension/l10n/bundle.l10n.ja.json
+++ b/packages/extension/l10n/bundle.l10n.ja.json
@@ -6,5 +6,6 @@
     "ts.parsingConfigError": "コンフィグファイルの解析エラー：",
     "ts.modelNotSelected": "モデルが選択されていません。先にモデルを選択してください。",
     "ts.requestFailed": "リクエストに失敗しました：",
-    "ts.contextGotoError": "コンテキストファイルの読み込みに失敗しました："
+    "ts.contextGotoError": "コンテキストファイルの読み込みに失敗しました：",
+    "ts.envKeyNotFound": "対応する環境変数が見つかりません。環境変数の設定を確認してください。問題がない場合は、コンピュータを再起動して再度お試しください。"
 }
