--- a/packages/extension/l10n/bundle.l10n.json
+++ b/packages/extension/l10n/bundle.l10n.json
@@ -6,5 +6,6 @@
     "ts.parsingConfigError": "Error parsing config file:",
     "ts.modelNotSelected": "No model selected, please select a model first.",
     "ts.requestFailed": "Request failed:",
-    "ts.contextGotoError": "Failed to load context file:"
+    "ts.contextGotoError": "Failed to load context file:",
+    "ts.envKeyNotFound": "The corresponding environment variable could not be found. Please check your environment variable settings. If there are no issues, restart your computer and try again."
 }
