--- a/packages/extension/l10n/bundle.l10n.zh-cn.json
+++ b/packages/extension/l10n/bundle.l10n.zh-cn.json
@@ -6,5 +6,6 @@
     "ts.parsingConfigError": "配置文件解析错误：",
     "ts.modelNotSelected": "尚未选择模型，请先选择模型。",
     "ts.requestFailed": "请求失败：",
-    "ts.contextGotoError": "载入上下文文件失败："
+    "ts.contextGotoError": "载入上下文文件失败：",
+    "ts.envKeyNotFound": "找不到对应环境变量，请检查您的环境变量设置，如果无误请重启电脑再次尝试。"
 }
