feat(gui-control): 实现插件与控制面板通信并添加国际化支持
- 添加控制面板和插件端的通信接口
- 集成 vue-i18n 实现国际化

--- a/docs/technical/03_接口文档.md
+++ b/docs/technical/03_接口文档.md
@@ -6,6 +6,28 @@
 
 在前端分别通过 `listener.ts` 和  `sender.ts` 来接收和发送消息。
 
+# 控制界面
+
+## 前端
+
+### `init.ready`
+
+前端组件挂载完成后发送，表示可以正常接收数据了
+
+无参数
+
+## 插件端
+
+### `language.set`
+
+设置语言
+
+参数：
+
+- `lang: string` 需要设置的语言
+
+# 聊天界面
+
 ## 前端
 
 ### `init.ready`
