feat(extension): 控制面板通信功能实现
- 前端实现保存记录、开始暂停、信息显示等功能

--- a/docs/technical/03_接口文档.md
+++ b/docs/technical/03_接口文档.md
@@ -16,6 +16,20 @@
 
 无参数
 
+### `status.set`
+
+请求插件改变记录状态
+
+参数：
+
+- `status: boolean` 请求改变为的状态，为真表示记录数据，为假表示暂停记录数据
+
+### `logs.save`
+
+让插件端保存当前缓存的记录
+
+无参数
+
 ## 插件端
 
 ### `language.set`
@@ -25,6 +39,30 @@
 参数：
 
 - `lang: string` 需要设置的语言
+
+### `status.current`
+
+插件当前记录状态
+
+参数：
+
+- `status: boolean` 当前的记录状态，为真表示记录数据，为假表示暂停记录数据
+
+### `logs.number`
+
+当前缓存的记录的数量
+
+参数：
+
+- `num: number` 当前缓存的记录的数量
+
+### `logs.prev`
+
+上一个操作的类型
+
+参数：
+
+- `prev: string` 上一个操作的类型
 
 # 聊天界面
 
